# LunarVim-mono

./: .gitignore  CMakeLists.txt
.github/workflows/: notes.md  release.yml
cmake/: BundlePlugins.cmake  GetVersion.cmake
cmake.packaging/: CMakeLists.txt  WixPatch.xml
scripts/: appimage.sh  gen_plugins_init.lua
snap/: snapcraft.yaml
